test/haskell2010/conformance/negative/duplicate-function-parameter.hs
module Main where

f x x = x

main = f 1 2
